resolve comments[1]